docs: Created README.md File

--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
   "name": "ahmed-al-sanadi-portfolio",
-  "description": "A portfolio website for Ahmed Al-sanadi showcasing projects and skills.",
+  "description": " Modern Full-Stack Developer Portfolio - A responsive Next.js portfolio showcasing Ahmed Al-Sanadi's projects, skills, and experience in React, Laravel, PHP, and modern web technologies. Features dark theme, smooth animations, and interactive components.",
   "author": "Ahmed Al-sanadi <ahmedalsanadi40@gmail.com>",
   "license": "MIT",
   "keywords": [
     "portfolio",
-    "web development",
-    "Ahmed Al-sanadi"
+    "full-stack-developer",
+    "nextjs",
+    "react",
+    "typescript",
+    "tailwindcss",
+    "laravel",
+    "php",
+    "web-development",
+    "frontend",
+    "backend",
+    "responsive-design",
+    "dark-theme",
+    "animations",
+    "ahmed-al-sanadi",
+    "yemeni-developer",
+    "modern-web",
+    "component-based",
+    "seo-optimized",
+    "vercel-deployment"
   ],
   "version": "0.1.0",
   "private": true,
