fix(responsiveness): fix home page featured project cards

--- a/data/projects-data.json
+++ b/data/projects-data.json
@@ -12,7 +12,7 @@
         "i18next"
       ],
       "screenshots": [
-        "/images/mockups/Untitled design (4).png",
+        "/images/mockups/movie-mockup.png",
         "/images/projects/movie-streaming/main.png",
         "/images/projects/movie-streaming/image-1.png",
         "/images/projects/movie-streaming/image-2.png",
@@ -60,7 +60,7 @@
         "React Icons"
       ],
       "screenshots": [
-        "/images/mockups/Untitled design (3).png",
+        "/images/mockups/finbiz-mockup.png",
         "/images/projects/finBiz/main.png",
         "/images/projects/finBiz/1.png",
         "/images/projects/finBiz/2.png",
